--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,26 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <title>Contact</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 
 <body>
+
+    <!-- nav bar menu-->
+    <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3"  aria-current="true">
+      <a class="navbar-brand" href="/index.html">Back</a>
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link" href="/cv.html">See cv</a>
+        </li>
+    </nav>
+
   <h2>Contact Details</h2>
   <h3><a href="https://www.linkedin.com/in/ana-aguilar-v-7378a1203/">LinkedIn</a></h3>
 
