--- a/index.html
+++ b/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+    <link rel="stylesheet" href="/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 <head>
   <meta charset="utf-8">
   <title>Ana´s personal web</title>
 </head>
 
-<body>
+<body id="body">
+<!-- nav bar menu-->
+<nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3"  aria-current="true">
+  <a class="navbar-brand" href="#">Me</a>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading1">intro</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading2">Education</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading3">Hobbies</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading4">Experience</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading5">Skills</a>
+    </li>
+    <li class="nav-item">
+      <a id="buttonDownload" class="nav-link" href="/cv.html">See cv</a>
+    </li>
+
+  </ul>
+</nav>
+<div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
+  <h4 id="intro">Me</h4>
+  <!--<img src="/img/back-color.jpg" class="img-fluid" alt="color"> -->
+  
   <table cellspacing="20px">
     <tr>
       <td><img src="img\ana.jpg" alt="Foto Ana" height="300px"></td>
       <td>
         <h1>Welcome to my site </h1>
         <p>Founder of this site, <em>tester </em>and <strong>web programer </strong> </p>
-        <p>I'm web programer and tester, I'm loved dogs and plants, I've a beautiful mini ganden </p>
+        <p>I'm web programer and tester, I'm loved dogs and plants, I've a beautiful mini garden </p>
       </td>
     </tr>
   </table>
   <hr>
 
-
-  <h3>Education </h3>
+  <h4 id="scrollspyHeading2">Education</h4>
   <ul>
     <li>Bachillerato #16, University of Colima</li>
     <li> <a href="https://telematicanet.ucol.mx/">Faculty of Telematics</a>, University of Colima </li>
   </ul>
   <hr>
+  <h4 id="scrollspyHeading3">Hobbies</h4>
   <h3>Hobbies</h3>
   <ol type="1">
     <li>Reding books</li>
@@ -34,7 +65,7 @@
     <li>Make infusions</li>
   </ol>
   <hr>
-  <h3>Experience</h3>
+  <h4 id="scrollspyHeading4">Experience </h4>
   <table cellspacing="20px">
     <thead>
       <tr>
@@ -61,8 +92,7 @@
       </tr>
     </tbody>
   </table>
-
-  <h3>Skills</h3>
+  <h4 id="scrollspyHeading5">Skills</h4>
   <table cellspacing="20px">
     <tr>
       <td>
@@ -124,9 +154,13 @@
 
     </tr>
   </table>
-
+</div>
 
   <h3><a href="contact.html">Contact me</a></h3>
+  <a id="buttonDownload" href="/img/1.png">download cv</a>
+  <a id="buttonDownload" href="/img/2.png">download cv</a>
+
+
 </body>
 
 </html>
